MicroAdmin, scooters